[package]
name = "picotui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for Picodata cluster management"
license = "BSL-1.0"

[workspace]

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI arguments
clap = { version = "4", features = ["derive"] }

# Utilities
humansize = "2"
chrono = "0.4"
