[package]
name = "picotui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for Picodata cluster management"
license = "BSL-1.0"

[workspace]

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime (minimal features)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

# HTTP client (minimal features, rustls instead of native-tls)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# CLI arguments (lightweight alternative to clap)
pico-args = "0.5"
