[package]
name = "picotui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for Picodata cluster management"
license = "BSL-1.0"

[workspace]

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.28"

# HTTP client (sync, lightweight)
ureq = { version = "3", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# CLI arguments (lightweight alternative to clap)
pico-args = "0.5"

# Cross-platform directories
dirs = "5"

[dev-dependencies]
# Mock HTTP server for integration tests
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "macros"] }

# Temp directories for token tests
tempfile = "3"
